일자 정보 Datetime으로 변환(startdate 컬럼 생성)

--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -16,11 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\a3759\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.1)\n",
+      "Requirement already satisfied: pandas in c:\\users\\a3759\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\a3759\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\a3759\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\a3759\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\a3759\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
-    "# 넘파이와 판다스 라이브러리 가져오기\n"
+    "pip install numpy pandas"
    ]
   },
   {
@@ -29,16 +52,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 데이터셋 불러오기\n",
-    "meteor_showers = \n",
-    "moon_phases = \n",
-    "constellations = \n",
-    "cities = "
+    "# 넘파이와 판다스 라이브러리 가져오기\n",
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터셋 불러오기\n",
+    "meteor_showers = pd.read_csv('data/meteorshowers.csv')\n",
+    "moon_phases = pd.read_csv('data/moonphases.csv')\n",
+    "constellations = pd.read_csv('data/constellations.csv')\n",
+    "cities = pd.read_csv('data/cities.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -154,18 +188,19 @@
        "4  northern, southern  northern, southern  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 유성우 데이터 확인하기\n"
+    "# 유성우 데이터 확인하기\n",
+    "meteor_showers.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -244,18 +279,19 @@
        "4  january    5            NaN          NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 달의 위상 데이터 확인하기\n"
+    "# 달의 위상 데이터 확인하기\n",
+    "moon_phases.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -346,18 +382,19 @@
        "4           Leo     april             90           65    21:00   northern"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 별자리 데이터 확인하기\n"
+    "# 별자리 데이터 확인하기\n",
+    "constellations.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -430,18 +467,19 @@
        "4  Addis Ababa      9.02              Ethiopia"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 도시 데이터 확인하기기\n"
+    "# 도시 데이터 확인하기기\n",
+    "cities.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +506,8 @@
     }
    ],
    "source": [
-    "# meteor_showers 유성우 정보 조회\n"
+    "# meteor_showers 유성우 정보 조회\n",
+    "meteor_showers.info()"
    ]
   },
   {
@@ -480,155 +519,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>radiant</th>\n",
-       "      <th>bestmonth</th>\n",
-       "      <th>startmonth</th>\n",
-       "      <th>startday</th>\n",
-       "      <th>endmonth</th>\n",
-       "      <th>endday</th>\n",
-       "      <th>hemisphere</th>\n",
-       "      <th>preferredhemisphere</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lyrids</td>\n",
-       "      <td>Lyra</td>\n",
-       "      <td>april</td>\n",
-       "      <td>april</td>\n",
-       "      <td>21</td>\n",
-       "      <td>april</td>\n",
-       "      <td>22</td>\n",
-       "      <td>northern</td>\n",
-       "      <td>northern</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Eta Aquarids</td>\n",
-       "      <td>Aquarius</td>\n",
-       "      <td>may</td>\n",
-       "      <td>april</td>\n",
-       "      <td>19</td>\n",
-       "      <td>may</td>\n",
-       "      <td>28</td>\n",
-       "      <td>northern, southern</td>\n",
-       "      <td>southern</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Orionids</td>\n",
-       "      <td>Orion</td>\n",
-       "      <td>october</td>\n",
-       "      <td>october</td>\n",
-       "      <td>2</td>\n",
-       "      <td>november</td>\n",
-       "      <td>7</td>\n",
-       "      <td>northern, southern</td>\n",
-       "      <td>northern, southern</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Perseids</td>\n",
-       "      <td>Perseus</td>\n",
-       "      <td>august</td>\n",
-       "      <td>july</td>\n",
-       "      <td>14</td>\n",
-       "      <td>august</td>\n",
-       "      <td>24</td>\n",
-       "      <td>northern</td>\n",
-       "      <td>northern</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Leonids</td>\n",
-       "      <td>Leo</td>\n",
-       "      <td>november</td>\n",
-       "      <td>november</td>\n",
-       "      <td>6</td>\n",
-       "      <td>november</td>\n",
-       "      <td>30</td>\n",
-       "      <td>northern, southern</td>\n",
-       "      <td>northern, southern</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           name   radiant bestmonth startmonth  startday  endmonth  endday  \\\n",
-       "0        Lyrids      Lyra     april      april        21     april      22   \n",
-       "1  Eta Aquarids  Aquarius       may      april        19       may      28   \n",
-       "2      Orionids     Orion   october    october         2  november       7   \n",
-       "3      Perseids   Perseus    august       july        14    august      24   \n",
-       "4       Leonids       Leo  november   november         6  november      30   \n",
-       "\n",
-       "           hemisphere preferredhemisphere  \n",
-       "0            northern            northern  \n",
-       "1  northern, southern            southern  \n",
-       "2  northern, southern  northern, southern  \n",
-       "3            northern            northern  \n",
-       "4  northern, southern  northern, southern  "
+       "array(['april', 'october', 'july', 'november'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 유성우 월 이름 변경\n",
-    "meteor_showers.head()"
+    "meteor_showers['startmonth'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 월명을 숫자로 변환하기 위한 딕셔너리 생성 months\n"
+    "# 월명을 숫자로 변환하기 위한 딕셔너리 생성 months\n",
+    "months = {'january': 1, 'february': 2, 'march': 3, 'april': 4, 'may': 5, 'june': 6,\n",
+    "          'july': 7, 'august': 8, 'september': 9, 'october': 10, 'november': 11, 'december': 12}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -744,18 +667,26 @@
        "4  northern, southern  northern, southern  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 유성우데이터프레임의 월명을 숫자로 변환 map 메소드 사용\n"
+    "# 유성우데이터프레임의 월명을 숫자로 변환 map 메소드 사용\n",
+    "\n",
+    "month_mapper = lambda x: months.get(x, x)\n",
+    "\n",
+    "meteor_showers['startmonth'] = meteor_showers['startmonth'].map(month_mapper)\n",
+    "meteor_showers['endmonth'] = meteor_showers['endmonth'].map(month_mapper)\n",
+    "meteor_showers['bestmonth'] = meteor_showers['bestmonth'].map(month_mapper)\n",
+    "\n",
+    "meteor_showers.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -782,21 +713,23 @@
     }
    ],
    "source": [
-    "# 유성우 월명이 숫자로 변경되었는지 정보 확인\n"
+    "# 유성우 월명이 숫자로 변경되었는지 정보 확인\n",
+    "meteor_showers.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 다른 데이터프레임(달의위상, 별자리)도 월명을 숫자로 변환\n"
+    "# 다른 데이터프레임(달의위상, 별자리)도 월명을 숫자로 변환\n",
+    "moon_phases['month'] = moon_phases['month'].map(month_mapper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +859,7 @@
        "[366 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1056,19 +989,20 @@
        "4           Leo          4             90           65    21:00   northern"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 별자리\n",
+    "constellations['bestmonth'] = constellations['bestmonth'].map(month_mapper)\n",
     "constellations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4331,7 +4265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
