달의위상 데이터프레임에 phases데이터를 이용하여 백분율 컬럼(percentage) 새롭게 추가하기

--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4  northern, southern  northern, southern 2020-11-06  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,13 +1169,14 @@
     "# 유성우 데이터프레임의 새로운 컬럼에 일자 정보를 datatime(20240428)으로 변환하여 저장, startdate, enddate\n",
     "# startdate 컬럼 추가\n",
     "\n",
-    "\n",
+    "meteor_showers['startdate'] = 2020 * 10000 + meteor_showers['startmonth'] * 100 + meteor_showers['startday']\n",
+    "meteor_showers['startdate'] = pd.to_datetime(meteor_showers['startdate'], format='%Y%m%d')\n",
     "meteor_showers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1304,7 @@
        "4  northern, southern  northern, southern 2020-11-06 2020-11-30  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,13 +1313,14 @@
     "# 유성우 데이터프레임의 새로운 컬럼에 일자 정보를 datatime(20240428)으로 변환하여 저장, startdate, enddate\n",
     "# enddate 컬럼 추가\n",
     "\n",
-    "\n",
+    "meteor_showers['enddate'] = 2020 * 10000 + meteor_showers['endmonth'] * 100 + meteor_showers['endday']\n",
+    "meteor_showers['enddate'] = pd.to_datetime(meteor_showers['enddate'], format='%Y%m%d')\n",
     "meteor_showers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1462,7 @@
        "[366 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,8 +1470,8 @@
    "source": [
     "# moon_phases 데이터 프레임에 일자 정보를 datatime으로 변환하여 date컬럼 추가\n",
     "\n",
-    "\n",
-    "\n",
+    "moon_phases['date'] = 2020 * 10000 + moon_phases['month'] * 100 + moon_phases['day']\n",
+    "moon_phases['date'] = pd.to_datetime(moon_phases['date'], format='%Y%m%d')\n",
     "moon_phases"
    ]
   },
@@ -1482,7 +1484,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'first quarter', 'full moon', 'third quarter', 'new moon'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moon_phases['moonphase'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1491,20 +1514,20 @@
        "{'new moon': 0, 'first quarter': 0.5, 'third quarter': 0.5, 'full moon': 1}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 달의 위상 데이터를 숫자로 변환하기\n",
-    "phases = {}\n",
+    "phases = {'new moon': 0, 'first quarter': 0.5, 'third quarter': 0.5, 'full moon': 1}\n",
     "phases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1658,13 +1681,15 @@
        "[366 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 달의위상 데이터프레임에 phases데이터를 이용하여 백분율 컬럼(percentage) 새롭게 추가하기\n"
+    "# 달의위상 데이터프레임에 phases데이터를 이용하여 백분율 컬럼(percentage) 새롭게 추가하기\n",
+    "moon_phases['percentage'] = moon_phases['moonphase'].map(phases)\n",
+    "moon_phases"
    ]
   },
   {
