달의 위상 누락값 처리

--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -48,18 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 넘파이와 판다스 라이브러리 가져오기\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4  january    5            NaN          NaN"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "4           Leo     april             90           65    21:00   northern"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "4  Addis Ababa      9.02              Ethiopia"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "array(['april', 'october', 'july', 'november'], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "4  northern, southern  northern, southern  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
        "4           Leo          4             90           65    21:00   northern"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4  northern, southern  northern, southern 2020-11-06  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "4  northern, southern  northern, southern 2020-11-06 2020-11-30  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
        "[366 rows x 5 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "{'new moon': 0, 'first quarter': 0.5, 'third quarter': 0.5, 'full moon': 1}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
        "[366 rows x 6 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,16 +1701,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 각 데이터 프레임에서 불필요한 컬럼 삭제하기 \n"
+    "# 각 데이터 프레임에서 불필요한 컬럼 삭제하기 \n",
+    "\n",
+    "meteor_showers.drop(meteor_showers.columns[3:8], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1803,7 @@
        "4       Leonids       Leo         11  northern, southern 2020-11-06 2020-11-30"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1918,18 +1920,19 @@
        "[366 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "moon_phases.drop(moon_phases.columns[:-2], axis=1, inplace=True)\n",
     "moon_phases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2014,12 +2017,13 @@
        "4           Leo          4             90           65   northern"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "constellations.drop('besttime', axis=1, inplace=True)\n",
     "constellations"
    ]
   },
@@ -2032,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,12 +2044,20 @@
     "# 데이터 프레임의 각 행을 순회하면서 이전 위상값으로 채워넣기\n",
     "\n",
     "# iterrows()를 사용하여 moon_phases 데이터프레임의 각 행을 순차적으로 반복하면서 행(row)과 그 행의 인덱스(index)를 가져옵니다.\n",
-    "# 결측값인 경우, lastphase에 저장된 값을 해당 행의 'percentage'에 채워 넣습니다. 즉, 이전에 확인된 마지막 'percentage' 값을 사용하여 결측값을 대체합니다.\n"
+    "# 결측값인 경우, lastphase에 저장된 값을 해당 행의 'percentage'에 채워 넣습니다. 즉, 이전에 확인된 마지막 'percentage' 값을 사용하여 결측값을 대체합니다.\n",
+    "\n",
+    "last_percentage = 0.0\n",
+    "\n",
+    "for i, row in moon_phases.iterrows():\n",
+    "    if pd.isna(row['percentage']):\n",
+    "        moon_phases.loc[i, 'percentage'] = last_percentage\n",
+    "    else:\n",
+    "        last_percentage = row['percentage']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2163,7 @@
        "[366 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2162,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2183,6 +2195,30 @@
    ],
    "source": [
     "moon_phases.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "percentage\n",
+       "0.5    184\n",
+       "1.0     93\n",
+       "0.0     89\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moon_phases['percentage'].value_counts()"
    ]
   },
   {
