도시명을 입력히면 위도와 별자리리스트와 메시지를 반환하는 함수

--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4  northern, southern  northern, southern  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4  january    5            NaN          NaN"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "4           Leo     april             90           65    21:00   northern"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "4  Addis Ababa      9.02              Ethiopia"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "array(['april', 'october', 'july', 'november'], dtype=object)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "4  northern, southern  northern, southern  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "[366 rows x 4 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
        "4           Leo          4             90           65    21:00   northern"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4  northern, southern  northern, southern 2020-11-06  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "4  northern, southern  northern, southern 2020-11-06 2020-11-30  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
        "[366 rows x 5 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "{'new moon': 0, 'first quarter': 0.5, 'third quarter': 0.5, 'full moon': 1}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
        "[366 rows x 6 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
        "4       Leonids       Leo         11  northern, southern 2020-11-06 2020-11-30"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1920,7 @@
        "[366 rows x 2 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2017,7 +2017,7 @@
        "4           Leo          4             90           65   northern"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2163,7 @@
        "[366 rows x 2 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2212,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2236,17 +2236,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "지정된 도시에서 각 유성우를 볼 수 있는 가능성이 높은 날짜를 예측하려고 합니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2256,7 +2254,7 @@
        "Name: latitude, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2264,7 +2262,8 @@
    "source": [
     "# 도시 데이터프레임에서 검색한 열(검색한 도시의 위도)만 가져오기\n",
     "# dframe.loc[조건, 가져올 컬럼 이름] 아래는 'Abu Dhabi'의 결과\n",
-    "\n"
+    "\n",
+    "cities[cities['city'] == 'Abu Dhabi']['latitude']"
    ]
   },
   {
@@ -2276,17 +2275,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 도시명을 입력하면 위도를 반환하는 함수 만들기\n",
-    "\n"
+    "'Seoul' in cities['city'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 도시명을 입력하면 위도를 반환하는 함수 만들기\n",
+    "\n",
+    "def latitude_of(city):\n",
+    "    city_row = cities[cities['city'] == city]\n",
+    "    if not city_row.empty:\n",
+    "        return city_row['latitude'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2298,12 +2321,12 @@
     }
    ],
    "source": [
-    "print(predict_best_meteor_shower_viewing('Abu Dhabi'))"
+    "print(latitude_of('Abu Dhabi'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2338,7 @@
     }
    ],
    "source": [
-    "print(predict_best_meteor_shower_viewing('Seoul'))"
+    "print(latitude_of('Seoul'))"
    ]
   },
   {
@@ -2327,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2435,7 @@
        "4           Leo          4             90           65   northern"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,18 +2446,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 도시명을 입력하면 위도와 별자리 리스트를 반환하는 함수 만들기\n",
     "\n",
-    "def predict_best_meteor_shower_viewing(city):\n"
+    "def predict_best_meteor_shower_viewing(city):\n",
+    "    latitude = latitude_of(city)\n",
+    "    \n",
+    "    indices = (constellations['latitudestart'] >= latitude) & (latitude >= constellations['latitudeend'])\n",
+    "    visible_constellations = constellations[indices]\n",
+    "    \n",
+    "    if not visible_constellations.empty:\n",
+    "        return latitude, visible_constellations['constellation'].to_list()\n",
+    "    \n",
+    "    return latitude, []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2475,7 @@
        "(np.float64(-41.28), ['Aquarius', 'Orion'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2455,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2496,7 @@
        "(np.float64(37.55), ['Lyra', 'Aquarius', 'Orion', 'Perseus'])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
