--- a/meteor-shower/OverTheMoon_유성우.ipynb
+++ b/meteor-shower/OverTheMoon_유성우.ipynb
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2466,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2475,7 @@
        "(np.float64(-41.28), ['Aquarius', 'Orion'])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2487,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2496,7 +2496,7 @@
        "(np.float64(37.55), ['Lyra', 'Aquarius', 'Orion', 'Perseus'])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2514,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2780,7 +2780,7 @@
        "       ['Zagreb', 45.82, 'Croatia']], dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2799,13 +2799,20 @@
     "\n",
     "def predict_best_meteor_shower_viewing(city):\n",
     "    \n",
+    "    latitude = latitude_of(city)\n",
     "    \n",
-    "    return latitude, constellations_list, meteor_shower_string"
+    "    indices = (constellations['latitudestart'] >= latitude) & (latitude >= constellations['latitudeend'])\n",
+    "    visible_constellations = constellations[indices]['constellation'].tolist()\n",
+    "    \n",
+    "    if visible_constellations:\n",
+    "        return latitude, visible_constellations, f'{city}에서는 별자리 관측이 가능합니다.'\n",
+    "    \n",
+    "    return latitude, constellations, f'{city}에서는 별자리 관측이 불가능합니다.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -2814,7 +2821,7 @@
        "(np.float64(-41.28), ['Aquarius', 'Orion'], 'Wellington에서는 별자리 관측이 가능합니다.')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2833,7 +2840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -2924,7 +2931,7 @@
        "4       Leonids       Leo         11  northern, southern 2020-11-06 2020-11-30"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2935,7 +2942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -2944,7 +2951,7 @@
        "(np.float64(-41.28), ['Aquarius', 'Orion'], 'Wellington에서는 별자리 관측이 가능합니다.')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2955,16 +2962,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>radiant</th>\n",
+       "      <th>bestmonth</th>\n",
+       "      <th>preferredhemisphere</th>\n",
+       "      <th>startdate</th>\n",
+       "      <th>enddate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Eta Aquarids</td>\n",
+       "      <td>Aquarius</td>\n",
+       "      <td>5</td>\n",
+       "      <td>southern</td>\n",
+       "      <td>2020-04-19</td>\n",
+       "      <td>2020-05-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Orionids</td>\n",
+       "      <td>Orion</td>\n",
+       "      <td>10</td>\n",
+       "      <td>northern, southern</td>\n",
+       "      <td>2020-10-02</td>\n",
+       "      <td>2020-11-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           name   radiant  bestmonth preferredhemisphere  startdate    enddate\n",
+       "1  Eta Aquarids  Aquarius          5            southern 2020-04-19 2020-05-28\n",
+       "2      Orionids     Orion         10  northern, southern 2020-10-02 2020-11-07"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
        "Timestamp('2020-04-19 00:00:00')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2972,29 +3040,33 @@
    "source": [
     "# 유성우 관측 시작일 가져오기기\n",
     "# 여기서는 Wellington의 결과값을 가지고 조회\n",
-    "meteor_showers_startdate = # Todo Here\n",
+    "\n",
+    "wellington_meteor_showers = meteor_showers[meteor_showers['radiant'].isin(wellington[1])]\n",
+    "display(wellington_meteor_showers)\n",
+    "\n",
+    "meteor_showers_startdate = wellington_meteor_showers.sort_values('startdate').reset_index().loc[0, 'startdate']\n",
     "meteor_showers_startdate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2020-05-28 00:00:00')"
+       "Timestamp('2020-11-07 00:00:00')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 유성우 관측 종료일\n",
-    "meteor_showers_enddate = # Todo Here\n",
+    "meteor_showers_enddate = wellington_meteor_showers.sort_values('enddate', ascending=False).reset_index().loc[0, 'enddate']\n",
     "meteor_showers_enddate"
    ]
   },
@@ -3006,17 +3078,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "달 위상의 최소값(달에서 반사되는 빛의 최소량)을 찾을 수 있습니다. 이 예측 함수에서는 첫 번째 날짜만 확인합니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3153,7 @@
        "113 2020-04-23         0.0"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3095,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -3104,7 +3174,7 @@
        "np.int64(112)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3116,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -3125,7 +3195,7 @@
        "Timestamp('2020-04-22 00:00:00')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3161,7 +3231,6 @@
     "    \n",
     "\n",
     "    # 해당 도시의 위도에서 관측 가능한 별자리 조회\n",
-    "    \n",
     "\n",
     "\n",
     "    # 볼 수 있는 별자리가 존재하지 않으면 오류 메시지\n",
